# plant-world-model

./: .gitignore  README.md  pyproject.toml
scripts/: run_pipeline.py  run_tep.py
src/: configs.py  data_collection.py  dataset.py  dynamics_model.py  figures.py  learned_env.py  rl_evaluation.py  training.py
tests/: conftest.py  test_data_collection.py  test_dataset.py  test_dynamics_model.py  test_figures.py  test_learned_env.py  test_rl_evaluation.py  test_training.py
